Fix: Button alignment functionality not responding with Additional Custom Breakpoints (ED-4675)

--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -259,10 +259,8 @@
 	}
 }
 
-// Alignment for Tablet
-@media (max-width: $screen-tablet-max) {
-
-	.elementor-tablet-align- {
+@mixin button-alignment($device) {
+	.elementor-#{$device}-align- {
 
 		&center {
 			text-align: center;
@@ -297,42 +295,34 @@
 	}
 }
 
+// Alignment for Widescreen
+@media (min-width: $screen-widescreen-min) {
+	@include button-alignment(laptop);
+}
+
+// Alignment for Laptop
+@media (max-width: $screen-laptop-max) {
+	@include button-alignment(laptop);
+}
+
+// Alignment for Tablet Extra
+@media (max-width: $screen-tablet-extra-max) {
+	@include button-alignment(tablet_extra);
+}
+
+// Alignment for Tablet
+@media (max-width: $screen-tablet-max) {
+	@include button-alignment(tablet);
+}
+
+// Alignment for Mobile Extra
+@media (max-width: $screen-mobile-extra-max) {
+	@include button-alignment(mobile_extra);
+}
+
 // Alignment for Mobile
 @media (max-width: $screen-mobile-max) {
-
-	.elementor-mobile-align- {
-
-		&center {
-			text-align: center;
-
-			.elementor-button {
-				width: auto;
-			}
-		}
-
-		&right {
-			text-align: right;
-
-			.elementor-button {
-				width: auto;
-			}
-		}
-
-		&left {
-			text-align: left;
-
-			.elementor-button {
-				width: auto;
-			}
-		}
-
-		&justify {
-
-			.elementor-button {
-				width: 100%;
-			}
-		}
-	}
+	@include button-alignment(mobile);
 }
 
 // Admin Bar - Icon (Front-End)
